--- a/app/assets/stylesheets/clients.scss
+++ b/app/assets/stylesheets/clients.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the Clients controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.text-center {
+  text-align: center;
+}
+
+.header-center > th {
+  text-align: center;
+}
+
+body { padding-top: 70px; }
