--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,61 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>ContactuallyLite</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+  <head>
+    <title>ContactuallyLite</title>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+  </head>
 
-<%= yield %>
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Contactually Lite</a>
+      </div>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#" data-toggle="modal" data-target="#import-file-form-modal">Import Client CSV</a></li>
+          <li><%= link_to 'Remove All Clients', remove_all_clients_path, data: {:confirm => 'Are you sure you want to delete all Clients?'}  %></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-</body>
+  <body>
+    <div class="container">
+      <%= yield %>
+    </div>
+  </body>
+
+  <div id='import-file-form-modal' class='modal fade'>
+    <div class='modal-dialog' role='document'>
+      <div class='modal-content'>
+        <div class='modal-header'>
+          <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
+            <span aria-hidden='true'>&times;</span>
+          </button>
+          <h4 class='modal-title'>Import Client CSV</h4>
+        </div>
+        <%= form_tag import_clients_path, multipart: true, :class => 'form-inline' do %>
+          <div class='modal-body'>
+            <div class="form-group">
+              <%= label_tag :file, 'Import File' %>
+              <%= file_field_tag :file, :class => 'form-control' %>
+            </div>
+          </div>
+          <div class='modal-footer'>
+            <button type='button' class='btn btn-sm btn-danger' data-dismiss='modal'>Cancel</button>
+            <%= submit_tag 'Import CSV', class: 'btn btn-sm btn-success' %>
+          </div>
+        <% end %>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
 </html>
